Set culture to auto in web.config

--- a/src/M13n/Web.config
+++ b/src/M13n/Web.config
@@ -17,6 +17,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <globalization culture="auto" uiCulture="auto"/>
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
@@ -33,7 +34,7 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    <profile defaultProvider="DefaultProfileProvider">
+    <!--<profile defaultProvider="DefaultProfileProvider">
       <providers>
         <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
       </providers>
@@ -47,18 +48,18 @@
       <providers>
         <add name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
       </providers>
-    </roleManager>
+    </roleManager>-->
     <!--
             If you are deploying to a cloud environment that has multiple web server instances,
             you should change session state mode from "InProc" to "Custom". In addition,
             change the connection string named "DefaultConnection" to connect to an instance
             of SQL Server (including SQL Azure and SQL  Compact) instead of to SQL Server Express.
       -->
-    <sessionState mode="InProc" customProvider="DefaultSessionProvider">
+    <!--<sessionState mode="InProc" customProvider="DefaultSessionProvider">
       <providers>
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
       </providers>
-    </sessionState>
+    </sessionState>-->
     <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
         <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> -->
     <httpModules>
