--- a/src/M13n/Web.config
+++ b/src/M13n/Web.config
@@ -17,7 +17,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <globalization culture="auto" uiCulture="auto"/>
+    <globalization culture="en" uiCulture="auto:en" />
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
